@@ -7,8 +7,6 @@ import io.netty.handler.codec.http.HttpResponseStatus;
 import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
 import io.vertx.core.MultiMap;
-import io.vertx.core.logging.Logger;
-import io.vertx.core.logging.LoggerFactory;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.BidderAliases;
@@ -28,12 +26,14 @@ import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.execution.Timeout;
 import org.prebid.server.json.JacksonMapper;
+import org.prebid.server.log.Logger;
+import org.prebid.server.log.LoggerFactory;
 import org.prebid.server.model.CaseInsensitiveMultiMap;
 import org.prebid.server.proto.openrtb.ext.response.ExtHttpCall;
 import org.prebid.server.proto.openrtb.ext.response.FledgeAuctionConfig;
 import org.prebid.server.util.HttpUtil;
-import org.prebid.server.vertx.http.HttpClient;
-import org.prebid.server.vertx.http.model.HttpClientResponse;
+import org.prebid.server.vertx.httpclient.HttpClient;
+import org.prebid.server.vertx.httpclient.model.HttpClientResponse;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -100,7 +100,8 @@ public class HttpBidderRequester {
         final List<BidderError> errors = httpRequestsWithErrors.getErrors();
         final List<HttpRequest<T>> httpRequests = enrichRequests(
                 bidderName, httpRequestsWithErrors.getValue(), requestHeaders, aliases, bidRequest);
-        recordBidderProvidedErrors(bidRejectionTracker, errors);
+
+        rejectErrors(bidRejectionTracker, errors, BidRejectionReason.REQUEST_BLOCKED_GENERAL);
 
         if (CollectionUtils.isEmpty(httpRequests)) {
             return emptyBidderSeatBidWithErrors(errors);
@@ -110,7 +111,7 @@ public class HttpBidderRequester {
 
         // stored response available only for single request interaction for the moment.
         final Stream<Future<BidderCall<T>>> httpCalls = isStoredResponse(httpRequests, storedResponse, bidderName)
-                ? Stream.of(makeStoredHttpCall(httpRequests.get(0), storedResponse))
+                ? Stream.of(makeStoredHttpCall(httpRequests.getFirst(), storedResponse))
                 : httpRequests.stream().map(httpRequest -> doRequest(httpRequest, timeout));
 
         // httpCalls contains recovered and mapped to succeeded Future<BidderHttpCall> with error inside
@@ -144,11 +145,13 @@ public class HttpBidderRequester {
                 .toList();
     }
 
-    private static void recordBidderProvidedErrors(BidRejectionTracker rejectionTracker, List<BidderError> errors) {
-        errors.stream()
+    private static void rejectErrors(BidRejectionTracker bidRejectionTracker,
+                                     List<BidderError> bidderErrors,
+                                     BidRejectionReason reason) {
+
+        bidderErrors.stream()
                 .filter(error -> CollectionUtils.isNotEmpty(error.getImpIds()))
-                .forEach(error -> rejectionTracker.reject(
-                        error.getImpIds(), BidRejectionReason.fromBidderError(error)));
+                .forEach(error -> bidRejectionTracker.reject(error.getImpIds(), reason));
     }
 
     private <T> boolean isStoredResponse(List<HttpRequest<T>> httpRequests, String storedResponse, String bidder) {
@@ -159,7 +162,7 @@ public class HttpBidderRequester {
         if (httpRequests.size() > 1) {
             logger.warn("""
                             More than one request was created for stored response, when only single stored response \
-                            per bidder is supported for the moment. Request to real {0} bidder will be performed.""",
+                            per bidder is supported for the moment. Request to real {} bidder will be performed.""",
                     bidder);
             return false;
         }
@@ -239,9 +242,9 @@ public class HttpBidderRequester {
      * Produces {@link Future} with {@link BidderCall} containing request and error description.
      */
     private static <T> Future<BidderCall<T>> failResponse(Throwable exception, HttpRequest<T> httpRequest) {
-        logger.warn("Error occurred while sending HTTP request to a bidder url: {0} with message: {1}",
+        logger.warn("Error occurred while sending HTTP request to a bidder url: {} with message: {}",
                 httpRequest.getUri(), exception.getMessage());
-        logger.debug("Error occurred while sending HTTP request to a bidder url: {0}",
+        logger.debug("Error occurred while sending HTTP request to a bidder url: {}",
                 exception, httpRequest.getUri());
 
         final BidderError.Type errorType =
@@ -374,16 +377,44 @@ public class HttpBidderRequester {
             final List<BidderError> bidderErrors = bidderResponse != null ? bidderResponse.getErrors() : null;
             if (bidderErrors != null) {
                 errorsRecorded.addAll(bidderErrors);
-                recordBidderProvidedErrors(bidRejectionTracker, bidderErrors);
+                rejectErrors(bidRejectionTracker, bidderErrors, BidRejectionReason.ERROR_GENERAL);
             }
         }
 
         private void handleBidderCallError(BidderCall<T> bidderCall) {
+            final Set<String> requestedImpIds = bidderCall.getRequest().getImpIds();
+            if (CollectionUtils.isEmpty(requestedImpIds)) {
+                return;
+            }
+
+            final Integer statusCode = Optional.ofNullable(bidderCall.getResponse())
+                    .map(HttpResponse::getStatusCode)
+                    .orElse(null);
+
+            if (statusCode != null && statusCode == HttpResponseStatus.SERVICE_UNAVAILABLE.code()) {
+                bidRejectionTracker.reject(requestedImpIds, BidRejectionReason.ERROR_BIDDER_UNREACHABLE);
+                return;
+            }
+
+            if (statusCode != null
+                    && (statusCode < HttpResponseStatus.OK.code()
+                    || statusCode >= HttpResponseStatus.BAD_REQUEST.code())) {
+
+                bidRejectionTracker.reject(requestedImpIds, BidRejectionReason.ERROR_INVALID_BID_RESPONSE);
+                return;
+            }
+
             final BidderError callError = bidderCall.getError();
             final BidderError.Type callErrorType = callError != null ? callError.getType() : null;
-            final Set<String> requestedImpIds = bidderCall.getRequest().getImpIds();
-            if (callErrorType != null && CollectionUtils.isNotEmpty(requestedImpIds)) {
-                bidRejectionTracker.reject(requestedImpIds, BidRejectionReason.fromBidderError(callError));
+
+            if (callErrorType == null) {
+                return;
+            }
+
+            if (callErrorType == BidderError.Type.timeout) {
+                bidRejectionTracker.reject(requestedImpIds, BidRejectionReason.ERROR_TIMED_OUT);
+            } else {
+                bidRejectionTracker.reject(requestedImpIds, BidRejectionReason.ERROR_GENERAL);
             }
         }
 
