@@ -8,7 +8,7 @@ import com.iab.openrtb.request.Video;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -54,7 +54,7 @@ public class RiseBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot deserialize value");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Cannot deserialize value");
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -80,7 +80,7 @@ public class RiseBidderTest extends VertxTest {
                 .imp(singletonList(Imp.builder().id("123")
                         .banner(Banner.builder().build())
                         .video(Video.builder().build())
-                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of(null, null))))
+                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of(null, null, null))))
                         .build()))
                 .build();
 
@@ -104,7 +104,7 @@ public class RiseBidderTest extends VertxTest {
                         .id("123")
                         .banner(Banner.builder().build())
                         .video(Video.builder().build())
-                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of("  testPublisherId  ", null))))
+                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of("  testPublisherId  ", null, null))))
                         .build()))
                 .build();
 
@@ -127,7 +127,7 @@ public class RiseBidderTest extends VertxTest {
                         .id("123")
                         .banner(Banner.builder().build())
                         .video(Video.builder().build())
-                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of(null, " testOrg  "))))
+                        .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of(null, " testOrg  ", null))))
                         .build()))
                 .build();
 
@@ -152,8 +152,8 @@ public class RiseBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Failed to decode: Unrecognized token");
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_server_response);
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Failed to decode: Unrecognized token");
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_server_response);
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -265,7 +265,7 @@ public class RiseBidderTest extends VertxTest {
         return impCustomizer.apply(Imp.builder().id("123"))
                 .banner(Banner.builder().build())
                 .video(Video.builder().build())
-                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of("testPublisherId", null))))
+                .ext(mapper.valueToTree(ExtPrebid.of(null, ExtImpRise.of("testPublisherId", null, null))))
                 .build();
     }
 
